==> jar-chou/delivering_car/STM32 - 副本/User/uart/usart.c <==
#include "usart.h"
#include "buffer.h"

void USART1_IRQHandler()
{
//	u8 dr;
    if (USART_GetFlagStatus(USART1, USART_FLAG_RXNE) == 1)
    {
//        dr = USART_ReceiveData(USART1);
      
    }
    USART_ClearFlag(USART1, USART_FLAG_RXNE);
}

void USART2_IRQHandler()
{
	if (USART_GetFlagStatus(USART2, USART_FLAG_RXNE) == 1)
	{
		buff_usart2 = USART_ReceiveData(USART2);
    Write_BUFF(&buff_usart2, &U2_buffer);
    }
	USART_ClearFlag(USART2, USART_FLAG_RXNE);
}

void USART3_IRQHandler()
{

    if (USART_GetFlagStatus(USART3, USART_FLAG_RXNE) == 1)
    {
        abn = USART_ReceiveData(USART3);
        Write_BUFF(&abn, &U3_buffer);
    }
    USART_ClearFlag(USART3, USART_FLAG_RXNE);
}
