==> sos-xiaobai/ch32v307-Whell-Leg/CH32V307_Servo_Test/fashion_star_servo/usart.c <==
#include "usart.h"

void USART1_IRQHandler(void)
{
    uint8_t ucTemp;
    if (USART_GetITStatus(USART1, USART_IT_RXNE) != RESET) {
        // 从串口读取一个字符
        ucTemp = USART_ReceiveData(USART1);
        // 新的字符添加到串口的环形缓冲队列中
        RingBuffer_Push(usart1.recvBuf, ucTemp);
    }
}

void USART2_IRQHandler(void)
{
    uint8_t ucTemp;
    if (USART_GetITStatus(USART2, USART_IT_RXNE) != RESET) {
        // 从串口读取一个字符
        ucTemp = USART_ReceiveData(usart2.pUSARTx);
        // 新的字符添加到串口的环形缓冲队列中
        RingBuffer_Push(usart2.recvBuf, ucTemp);
    }
}

void USART3_IRQHandler(void)
{
    uint8_t ucTemp;
    if (USART_GetITStatus(USART3, USART_IT_RXNE) != RESET) {
        // 从串口读取一个字符
        ucTemp = USART_ReceiveData(usart3.pUSARTx);
        // 新的字符添加到串口的环形缓冲队列中
        RingBuffer_Push(usart3.recvBuf, ucTemp);
    }
}
